llvm/test/tools/llubi/lib_free_nullary_pointer.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare void @free(ptr)

define i32 @main() {
  %p = getelementptr i8, ptr null, i64 42
  call void @free(ptr %p)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %p = getelementptr i8, ptr null, i64 42 => ptr 0x2A [dangling]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @free(ptr %p) at @main
; CHECK-NEXT: Immediate UB detected: freeing a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
